[package]
name = "chinese-dictionary"
version = "1.0.0"
authors = ["Preston Wang-Stosur-Bassett <p.wanstobas@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "chinese_dictionary_neon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.6.0"

[dependencies]
neon = "0.6.0"
chinese_dictionary = "1.0.1"
