[package]
name = "chinese-dictionary"
version = "1.0.1"
authors = ["Preston Wang-Stosur-Bassett <p.wanstobas@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "chinese_dictionary_neon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.10.1"

[dependencies]
neon = "0.10.1"
chinese_dictionary = "2.0.0"
